--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"prepare": "svelte-kit sync"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^1.0.2",
+		"@sveltejs/adapter-vercel": "^1.0.5",
 		"@sveltejs/kit": "^1.2.9",
 		"prettier": "^2.8.3",
 		"prettier-plugin-svelte": "^2.9.0",
